--- a/index.html
+++ b/index.html
@@ -57,12 +57,9 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>Quem foi Oppenheimer??</h2>
+                    <p class="p-2">J. Robert Oppenheimer nasceu em 1904, na cidade de Nova York. Brilhante desde muito jovem, o físico se formou com louvor na prestigiada universidade de Harvard, em 1925, e agregou mais e mais títulos e competências ao longo dos anos seguintes.
+e é conhecido como o destruidor de mundos ou pai da bomba atômica, foi um cientista muito significativo na segunda guerra mundial.</p>
                 </div>
             </div>
         </section>
