--- a/index.html
+++ b/index.html
@@ -128,7 +128,13 @@ e é conhecido como o destruidor de mundos ou pai da bomba atômica, foi um cien
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
-  
+   <div id="acessibilidade">
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+                    <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+                </div>
+        </nav>
+</header>
+
 </body>
 
 </html>
